<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Prussian_Blue"
        android:elevation="50sp"
        android:fadingEdge="horizontal|vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivthumbnail"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/teal_200" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5sp">

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="4dp"
                android:text="@string/product_title"
                android:textColor="@color/Lime"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvbrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="4dp"
                android:text="@string/product_brand"
                android:textColor="@color/Lime"
                android:textSize="16sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="4dp"
                android:text="@string/product_price"
                android:textColor="@color/Lime"
                android:textSize="16sp"
                android:textStyle="normal"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Prussian_Blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/product_category"
                android:textColor="@color/teal_200"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/Lime"
                android:textSize="15sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rating"
                android:textColor="@color/teal_200"
                android:textSize="18sp"/>

            <RatingBar
                android:id="@+id/rbrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/product_description"
            android:textColor="@color/teal_200"/>

        <TextView
            android:id="@+id/tvdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/product_description"
            android:textColor="@color/Lime"/>

    </LinearLayout>

</LinearLayout>