<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <LinearLayout
            android:id="@+id/llcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/light_blue">

        <ImageView
            android:id="@+id/ivdisplay"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/thumbnail_string"/>

        <!--on below line we are creating
            a simple text view-->
        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:text="@string/product_title"
            android:textAlignment="textStart"
            android:textColor="@color/Lime"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />


        <TextView
            android:id="@+id/tvprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:text="@string/product_price"
            android:textColor="@color/Lime"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            />

        </LinearLayout>

</androidx.cardview.widget.CardView>
